k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryyppynet
  namespace: ryyppynet
spec:
  selector:
    app: ryyppynet
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
