k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ryyppynet
  namespace: ryyppynet
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: test.ryyppy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ryyppynet
                port:
                  number: 80
  tls:
    - hosts:
        - test.ryyppy.net
      secretName: ryyppynet-tls
